--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -52,7 +52,7 @@
         }
 
         /* Styling for the welcome text */
-        .team-spy {
+        .team-rez {
             font-size: 3rem;
             font-weight: bold;
             text-transform: uppercase;
@@ -100,7 +100,7 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
-            .team-spy {
+            .team-rez {
                 font-size: 2.5rem;
             }
 
@@ -115,7 +115,7 @@
         }
 
         @media (min-width: 1200px) {
-            .team-spy {
+            .team-rez {
                 font-size: 4rem;
             }
         }
@@ -124,12 +124,12 @@
 <body>
     <!-- Main Content -->
     <div class="container">
-        <div class="team-spy">Team SPY</div>
+        <div class="team-rez">Team rez</div>
         <div class="bot-status">⚡ Bot is Live ⚡</div>
 
         <div class="actions">
-            <a href="https://t.me/team_spy_pro" class="btn">Join Us</a>
-            <a href="https://github.com/devgaganin" class="btn">GitHub</a>
+            <a href="https://t.me/username" class="btn">Join Us</a>
+            <a href="https://github.com/rez120938" class="btn">GitHub</a>
         </div>
     </div>
 </body>
